Implement Risk Parity Portfolio logic

--- a/Project/projectv2.ipynb
+++ b/Project/projectv2.ipynb
@@ -30,7 +30,7 @@
     "   - Use the generated plots to visually assess the impact of your calculations. The visualizations are crucial for understanding the risk-parity approach and how different assets contribute to the portfolio.\n",
     "\n",
     "6. **Reflect:**\n",
-    "   - As you work through the notebook, consider why each step is necessary and how it contributes to the overall goal of building a risk-parity portfolio. If something isn’t clear, take a moment to reflect or explore additional resources.\n",
+    "   - As you work through the notebook, consider why each step is necessary and how it contributes to the overall goal of building a risk-parity portfolio. If something isn\u2019t clear, take a moment to reflect or explore additional resources.\n",
     "\n",
     "Enjoy the process of exploring risk-parity strategies, and don't hesitate to dive deeper into the data or code to enhance your learning experience!"
    ]
@@ -77,7 +77,7 @@
    "source": [
     "# Download front-month futures data\n",
     "symbols = ['ES=F', 'ZN=F', 'GC=F', 'DX=F']\n",
-    "data = yf.download(symbols, auto_adjust=False)"
+    "data = yf.download(symbols, start='2000-01-01', auto_adjust=False)"
    ]
   },
   {
@@ -98,9 +98,9 @@
    "outputs": [],
    "source": [
     "# Resample data to monthly frequency\n",
-    "data = None # YOUR CODE HERE\n",
+    "data = data.resample('M').last()\n",
     "# Convert index to datetime\n",
-    "data.index = None # YOUR CODE HERE"
+    "data.index = pd.to_datetime(data.index)"
    ]
   },
   {
@@ -140,9 +140,14 @@
    "outputs": [],
    "source": [
     "# Subset adjusted close prices and fill NaNs\n",
-    "prices = None # YOUR CODE HERE\n",
+    "if 'Adj Close' in data.columns:\n",
+    "    prices = data['Adj Close']\n",
+    "else:\n",
+    "    prices = data['Close']\n",
+    "prices = prices.fillna(method='ffill')\n",
+    "prices = prices.dropna()\n",
     "# Convert index to datetime\n",
-    "prices.index = None # YOUR CODE HERE"
+    "prices.index = pd.to_datetime(prices.index)"
    ]
   },
   {
@@ -222,7 +227,7 @@
    "outputs": [],
    "source": [
     "# Compute arithmetic returns\n",
-    "returns = None # YOUR CODE HERE"
+    "returns = prices.pct_change().dropna()"
    ]
   },
   {
@@ -273,12 +278,12 @@
    "source": [
     "def compute_risk_parity_weights(returns, window_size=36):\n",
     "    # Compute volatility known at time t\n",
-    "    rolling_vol = None # YOUR CODE HERE\n",
-    "    rolling_inverse_vol = None # YOUR CODE HERE\n",
+    "    rolling_vol = returns.rolling(window=window_size).std()\n",
+    "    rolling_inverse_vol = 1 / rolling_vol\n",
     "    # Divide inverse volatility by the sum of inverse volatilities\n",
-    "    risk_parity_weights = None # YOUR CODE HERE\n",
+    "    risk_parity_weights = rolling_inverse_vol.div(rolling_inverse_vol.sum(axis=1), axis=0)\n",
     "    # Shift weights by one period to use only information available at time t\n",
-    "    risk_parity_weights = None # YOUR CODE HERE\n",
+    "    risk_parity_weights = risk_parity_weights.shift(1).dropna()\n",
     "    return risk_parity_weights\n",
     "\n",
     "risk_parity_weights = compute_risk_parity_weights(returns, 36)"
@@ -342,8 +347,9 @@
    "outputs": [],
    "source": [
     "# Calculate weighted returns\n",
-    "weighted_returns = None # YOUR CODE HERE\n",
-    "risk_parity_portfolio_returns = None # YOUR CODE HERE"
+    "weighted_returns = returns * risk_parity_weights\n",
+    "weighted_returns = weighted_returns.dropna()\n",
+    "risk_parity_portfolio_returns = weighted_returns.sum(axis=1)"
    ]
   },
   {
@@ -413,26 +419,26 @@
    "outputs": [],
    "source": [
     "# Evaluate portfolio performance\n",
-    "annual_mean_return = None # YOUR CODE HERE\n",
-    "annual_volatility = None # YOUR CODE HERE\n",
-    "skewness = None # YOUR CODE HERE\n",
-    "kurtosis = None # YOUR CODE HERE\n",
+    "annual_mean_return = risk_parity_portfolio_returns.mean() * 12\n",
+    "annual_volatility = risk_parity_portfolio_returns.std() * np.sqrt(12)\n",
+    "skewness = risk_parity_portfolio_returns.skew()\n",
+    "kurtosis = risk_parity_portfolio_returns.kurt()\n",
     "\n",
     "# Compute drawdown\n",
-    "cumulative_returns = None # YOUR CODE HERE\n",
-    "running_max = None # YOUR CODE HERE\n",
-    "drawdown = None # YOUR CODE HERE\n",
-    "max_drawdown = None # YOUR CODE HERE\n",
+    "cumulative_returns = (1 + risk_parity_portfolio_returns).cumprod()\n",
+    "running_max = cumulative_returns.cummax()\n",
+    "drawdown = (cumulative_returns - running_max) / running_max\n",
+    "max_drawdown = drawdown.min()\n",
     "\n",
     "# Compute Sharpe ratio\n",
-    "sharpe_ratio = None # YOUR CODE HERE\n",
+    "sharpe_ratio = annual_mean_return / annual_volatility\n",
     "\n",
     "# Compute Sortino ratio\n",
-    "downside_std = None # YOUR CODE HERE\n",
-    "sortino_ratio = None # YOUR CODE HERE\n",
+    "downside_std = risk_parity_portfolio_returns[risk_parity_portfolio_returns < 0].std() * np.sqrt(12)\n",
+    "sortino_ratio = annual_mean_return / downside_std\n",
     "\n",
     "# Compute Calmar ratio\n",
-    "calmar_ratio = None # YOUR CODE HERE\n",
+    "calmar_ratio = annual_mean_return / abs(max_drawdown)\n",
     "\n",
     "# Display results\n",
     "print(f\"Mean Annual Return: {annual_mean_return:.4f}\")\n",
